--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,19 @@
 
 <app-header></app-header>
 
+
 <section class="ae-container-fluid rk-main">
-<br>
-<br>
 
-<app-portafolio></app-portafolio>
 
-<h1>
-  Hola mundo
+<!-- <app-item></app-item> -->
 
-</h1>
+<!-- <app-portafolio></app-portafolio> -->
+
+<!-- <app-about></app-about> -->
+
+<router-outlet></router-outlet>
+
+
 </section>
 <app-footer></app-footer>
 
