--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -29,29 +29,50 @@
             <a routerLink="about" class="rk-menu__link">About</a>
           </li>
           
-          <!-- <li class="rk-menu__item"><a href="#0" class="rk-menu__link">Pages</a>
+          <li class="rk-menu__item"><a href="#0" class="rk-menu__link">Categorias</a>
             <nav class="rk-menu__sub">
               <ul class="rk-container">
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">About</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Documentation</a></li>
-                <li class="rk-menu__item"><a href="design-styles.html" class="rk-menu__link">Design Styles</a></li>
+                <li class="rk-menu__item">                   
+                  <a routerLink="search/papeleria" class="rk-menu__link">Papeleria</a>
+                </li>
+                <li class="rk-menu__item">
+                  <a routerLink="search/libros" class="rk-menu__link">Libros</a>
+                </li>
+                <li class="rk-menu__item">
+                  <a routerLink="search/accesorios" class="rk-menu__link">Accesorios</a>
+                </li>
               </ul>
             </nav>
           </li>          
          
           <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact Us</a>
-          </li>-->
+          </li>
        
        
-        </ul>
-        <form class="rk-search">
-          <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+       </ul>
+
+
+        <div class="rk-search">
+         
+          <input type="text" 
+              (keyup.enter) = "buscarProduct(txtBuscar.value)"
+
+              placeholder="Buscar.." 
+              id="urku-search"               
+              class="rk-search-field"
+              #txtBuscar
+              
+              >
+
+
           <label for="urku-search">
             <svg>
               <use xlink:href="assets/img/symbols.svg#icon-search"></use>
             </svg>
           </label>
-        </form>
+        </div>
+
+
       </nav>
     </div>
   </header>
