--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 
+.main-container{
+  margin-top: 20px;
+}
 
 .animated {
     -webkit-animation-duration: 0.6s;
     animation-duration: 0.6s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+  }
+
+  
+  .fast {
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
   }
