ready for prod v2.1

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -26,25 +26,25 @@
 
       <div class="ae-grid__item item-lg-4 au-xs-ta-center">
          <!-- <a href="{{_services.info.facebook}}" class="rk-social-btn "></a> se va de la página  -->
-         <a target="_blank" href="{{_services.info.facebook}}" class="rk-social-btn ">
+         <a target="_blank" href="{{_services.infocontact.facebook}}" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
           </svg>
         </a>
 
-        <a target="_blank" href="{{_services.info.twitter}}" class="rk-social-btn ">
+        <a target="_blank" href="{{_services.infocontact.instagram}}" class="rk-social-btn ">
           <!-- [href]="_services.info.twitter"  otra forma-->
-          <svg>
-            <use xlink:href="assets/img/symbols.svg#icon-twitter"></use>
-          </svg>
-        </a>
-
-        <!-- <a href="#0" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-pinterest"></use>
           </svg>
         </a>
-        <a href="#0" class="rk-social-btn ">
+
+       <a  target="_blank"  href="{{_services.infocontact.tripadvisor}}" class="rk-social-btn">
+          <svg>
+            <use   href="assets/img/tripadvisor_icon.svg" class="rk-social-btn" ></use>
+          </svg>
+        </a>
+         <!-- <a href="#0" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-tumblr"></use>
           </svg>
@@ -53,10 +53,10 @@
       </div>
       <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
         <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> 
-          <a href="mailTo:{{ _services.info.email }}" class="rk-dark-color ">
+          <a href="mailTo:{{ _services.infocontact.email }}" class="rk-dark-color ">
             
             <!-- vplasin@gmail.com  -->
-            {{_services.info.email}}
+            {{_services.infocontact.email}}
           </a>
         </span>
       </p>
