--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -28,18 +28,19 @@
   </div>
     
 
-    <div  class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4   animated fadeIn fast"    >
+    <div  class="ae-masonry  ae-masonry-md-2  ae-masonry-xl-3    animated fadeIn fast"  >
+     
 
-
-      <a *ngFor="let producto of _productoService.productoFiltrado"      
+       <a *ngFor="let producto of _productoService.productoFiltrado"      
       routerLink="/item/{{ producto.cod }}" 
-      class="animated fadeIn rk-item ae-masonry__item"      
-      >
-
-       <!-- <img src="assets/productos/{{ producto.url }}.jpg" alt=""> -->
+      class="animated fadeIn  rk-item ae-masonry__item"      
+      >   
        <img src="assets/excursiones/{{ producto.url }}.jpg" alt="">
         
+       
+        
         <div  routerLink="/item/{{ producto.cod }}"       class="item-meta">
+
            <h2>{{ producto.titulo }}</h2>
            <p>{{ producto.categoria}}</p>
         </div>
@@ -47,3 +48,20 @@
         
        
     </div>
+
+    <!-- <div class="card-columns m-1 animated fadeIn fast" >
+     
+      <a *ngFor="let producto of _productoService.productoFiltrado"      
+      routerLink="/item/{{ producto.cod }}" 
+      class="animated fadeIn card"    
+      >
+          <img src="assets/excursiones/{{ producto.url }}.jpg"  class="card-img-top" alt="">
+                
+          <div  routerLink="/item/{{ producto.cod }}"      class="card-body">
+            <h2>{{ producto.titulo }}</h2>
+            <p>{{ producto.categoria}}</p>
+
+          </div>
+      </a>
+    </div> -->
+
