--- a/src/app/shared/contact/contact.component.html
+++ b/src/app/shared/contact/contact.component.html
@@ -3,13 +3,15 @@
 <div class="container">
   <div class="row">
     <div class="col-2">
-
+       <p class="lead" > {{ days | uppercase }}</p>
     </div>
     <div class="col-8">
-      <h1 > {{ hike  }}</h1>
+        <h1 > {{ hike  }}</h1>
     </div>
     <div class="col-2">
-      <h2 > {{ product.precio | currency:'EUR'  }}</h2>
+      <!-- <h2 > {{ product.precio | currency:'EUR'  }}</h2> -->
+        <h2 > {{ price | currency:'EUR'  }}</h2>
+      
     </div>
   </div>
 </div>
@@ -98,7 +100,8 @@
                name="Fecha"
                [class.is-invalid]="Fecha.invalid && Fecha.touched"
                [ngModel] ="usuario.date"
-               pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))" required
+               pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))" 
+               required
   
                #Fecha="ngModel">
                <small 
