--- a/src/app/shared/contact/contact.component.html
+++ b/src/app/shared/contact/contact.component.html
@@ -1,20 +1,21 @@
 
 
-<div class="container">
+<!-- <div class="container"></div> -->
   <div class="row">
     <div class="col-2">
-       <p class="lead" > {{ days | uppercase }}</p>
+       <p class="lead text-center text-left" > {{ days | uppercase }}</p>
     </div>
-    <div class="col-8">
-        <h1 > {{ hike  }}</h1>
+    <div class="col-6">
+        <h3 class="text-center" > {{ hike  }}</h3>
+
     </div>
-    <div class="col-2">
+    <div class="col-4">
       <!-- <h2 > {{ product.precio | currency:'EUR'  }}</h2> -->
-        <h2 > {{ price | currency:'EUR'  }}</h2>
+        <h3 class="text-center" > {{ price | currency:'EUR'  }}</h3>
       
     </div>
   </div>
-</div>
+
 <hr>
 
 <form autocomplete="off"  (ngSubmit)="enviarSiGuardado(forma )"   (keyup) ="guardar( forma )"  #forma="ngForm">
